# salt-bootstrap

./: .gitignore  .gitmodules  .kitchen.yml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  bootstrap-salt.sh  setup.cfg  setup.py
.github/workflows/: main.yml
.github/workflows/templates/: generate.py
requirements/: base.in  base.txt  tests.txt
src/saltbootstrap/: cli.py  exceptions.py  output.py  subprocess.py
src/saltbootstrap/os/: __init__.py  abc.py
src/saltbootstrap/os/linux/: __init__.py  archlinux.py  centos.py
tests/: runtests.sh  test_bashisms.sh  test_usage.sh
