[metadata]
name = salt-bootstrap
version = attr: saltbootstrap.__version__
description = Portable, salt-bootstrap
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Pedro Algarvio
author_email = pedro@algarvio.me
url = http://saltstack.com
project_urls =
    Source=https://github.com/saltstack/salt-bootstrap
    Tracker=https://github.com/saltstack/salt-bootstrap/issues
license = Apache Software License 2.0
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Topic :: System :: Clustering
    Topic :: System :: Distributed Computing
platforms = unix, linux, osx, cygwin, win32

[options]
zip_safe = False
include_package_data = True
packages = find:

[options.entry_points]
console_scripts =
  salt-bootstrap=saltbootstrap.cli:main

[bdist_wheel]
universal = 0

[mypy]
mypy_path = src
ignore_missing_imports = True
no_implicit_optional = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unused_configs = True

[flake8]
max-line-length = 108
